fix: handling long text overflow

--- a/src/ui/modules/library-sidebar/index.less
+++ b/src/ui/modules/library-sidebar/index.less
@@ -162,3 +162,22 @@
     transform: translate(-50%, -50%);
   }
 }
+
+.popover-content {
+  width: 300px;
+  max-width: 300px;
+  white-space: pre-line;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  overflow-y: auto;
+  max-height: 400px;
+
+  .popover-title {
+    margin: 0;
+    margin-bottom: 12px;
+  }
+
+  .popover-text {
+    font-size: 14px;
+  }
+}
